otro commit nuevo

--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit aut quis, autem nihil quia consequatur expedita, ad a ratione harum recusandae tempora placeat. Tempore consequuntur ipsam repellendus voluptates, at illo? 
 </body>
 </html>
